alignment fix

--- a/src/App.scss
+++ b/src/App.scss
@@ -94,8 +94,7 @@ body {
 
       .calculator {
         display: flex;
-        gap: 1rem;
-        padding: 1rem;
+        gap: 10px;
         flex-wrap: wrap;
         justify-content: space-around;
         align-items: center;
@@ -112,8 +111,9 @@ body {
           border: 1px solid #3d3c42;
           border-radius: 10px;
           background-color: #3d3c42;
-          padding: 7px;
+          padding: 1rem;
           color: white;
+          width: 250px;
 
           &:focus {
             border: none;
